Change size of calculator and fix bug with too much symbols

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ button[value=" % "]:hover {
 
 .calculator {
     height: 800px;
-    width: 600px;
+    width: 524px;
     box-sizing: border-box;
     border: 2px solid rgba(0, 0, 0, 0.261);
     display: flex;
@@ -94,7 +94,7 @@ button[value=" % "]:hover {
 .calc-upper-side {
     box-sizing: border-box;
     height: 400px;
-    width: 596px;
+    width: 520px;
     padding: 10px;
     display: flex;
     justify-content: center;
@@ -110,7 +110,7 @@ button[value=" % "]:hover {
     flex-wrap: wrap;
     justify-content: space-evenly;
     height: 400px;
-    width: 596px;
+    width: 520px;
     padding: 20px 10px;
 }
 
@@ -154,6 +154,6 @@ span {
     }
 
     p {
-        font-size: 1.2em;
+        font-size: 1.1em;
     }
 }
